--- a/crm_tbm_equipment_survey_sr/views/crm_lead_views.xml
+++ b/crm_tbm_equipment_survey_sr/views/crm_lead_views.xml
@@ -5,7 +5,7 @@
         <field name="model">crm.equipment.survey</field>
         <field name="inherit_id" ref="crm_tbm_equipment_survey.crm_tbm_equipment_survey_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//form/group[1]" position="after">
+            <xpath expr="//form/sheet/group[1]" position="after">
                 <group>
                     <field name="crm_equipment_survey_sr_ids" widget="one2many_tags" context="{'default_crm_equipment_survey_id': id,'search_default_crm_equipment_survey_id': [id]}" />
                 </group>
@@ -31,26 +31,28 @@
         <field name="model">crm.equipment.survey.sr</field>
         <field name="arch" type="xml">
             <form string="Speedrail">
-                <group>
+                <sheet>
                     <group>
-                        <field name="crm_equipment_survey_id" attrs="{'invisible': True}" context="{'default_crm_equipment_survey_id': id,'search_default_crm_equipment_survey_id': [id]}" />
-                        <field name="name" attrs="{'invisible': True}" />
-                        <field name="count" />
-                        <field name="bottle"/>
-                        <field name="deep"/>
-                        <field name="camera"/>
+                        <group>
+                            <field name="crm_equipment_survey_id" context="{'default_crm_equipment_survey_id': id,'search_default_crm_equipment_survey_id': [id]}" invisible="1" />
+                            <field name="name" invisible="1" />
+                            <field name="count" />
+                            <field name="bottle"/>
+                            <field name="deep"/>
+                            <field name="camera"/>
+                        </group>
+                        <group>
+                            <field name="measurement"/>
+                            <field name="bar_area_size"/>
+                            <field name="pos_register"/>
+                            <field name="pos_supplier"/>
+                            <field name="power_source"/>
+                        </group>
                     </group>
                     <group>
-                        <field name="measurement"/>
-                        <field name="bar_area_size"/>
-                        <field name="pos_register"/>
-                        <field name="pos_supplier"/>
-                        <field name="power_source"/>
+                        <field name="note" widget="pad"/>
                     </group>
-                </group>
-                <group>
-                    <field name="note" widget="pad"/>
-                </group>
+                </sheet>
             </form>
         </field>
     </record>
